
----------
keflemin    Date: Sat Jul 25 16:15:51 EDT 2009  CSN: CSN-hasim-mips-269
                  Sat Jul 25 20:15:51 UTC 2009


Directory config/pm/hasim-mips/smips-unpipelined/with-cache
 smips_unpipelined_with_cache_exe.apm Locally Modified          268 

Directory config/pm/hasim-mips/smips-unpipelined/no-cache
 smips_unpipelined_no_cache_exe.apm Locally Modified          268 

Directory config/pm/hasim-mips/smips-superscalar-ooo
 smips_superscalar_ooo_exe.apm Locally Modified          268 
 smips_superscalar_ooo_htg.apm Locally Modified          268 

Directory config/pm/hasim-mips/smips-inorder
 smips_inorder_exe.apm     Locally Modified          268 
 smips_inorder_htg.apm     Locally Modified          268 



Changed to new hw/sw system

----------
mcadler     Date: Mon Aug  3 20:41:57 EDT 2009  CSN: CSN-hasim-mips-270
                  Tue Aug  4 00:41:57 UTC 2009


Directory modules/hasim-mips/isa/datapath/smips
 isa_datapath_smips.bsv    Locally Modified          269 

Directory modules/hasim-mips/isa/definition/smips
 isa_derived_types.bsv     Locally Modified          269 

Pass register writebacks on a soft connection separate from the ISA datapath
service.

----------
mpellaue    Date: Wed Aug 12 16:29:13 EDT 2009  CSN: CSN-hasim-mips-271
                  Wed Aug 12 20:29:13 UTC 2009


Directory config/pm/hasim-mips/smips-unpipelined/with-cache
 smips_unpipelined_with_cache_exe.apm Locally Modified          270 

Directory config/pm/hasim-mips/smips-unpipelined/no-cache
 smips_unpipelined_no_cache_exe.apm Locally Modified          270 

Directory config/pm/hasim-mips/smips-superscalar-ooo
 smips_superscalar_ooo_exe.apm Locally Modified          270 
 smips_superscalar_ooo_htg.apm Locally Modified          270 

Directory config/pm/hasim-mips/smips-inorder
 smips_inorder_exe.apm     Locally Modified          270 
 smips_inorder_htg.apm     Locally Modified          270 


* Added TERM_VDEV_STARTER variable for new virtual device.